--- a/PUNTO2/index.html
+++ b/PUNTO2/index.html
@@ -53,7 +53,13 @@
 
     </div>
 
-    <div class="footer"> <p>Ciclo de Vida</p></div>
+    <div class="footer"> <a href="../CiclosDeVida/index.html"><p>Ciclos de Vida</p></a>   </div>
+    
+    <div class="footer"> <a href="../jira/index.html"><p>Jira</p></a></div>
+
+    <div class="footer"> <a href ="../scrum/index.html"><p>Scrum</p></a></div>
+
+    <div class="footer"> <a href="../muestraProyecto/index.html"><p>Muestra del proyecto</p></a> </div>
     
 </body>
 </html>
