--- a/CiclosDeVida/index.html
+++ b/CiclosDeVida/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ciclo de Vida del Software</title>
+    <link rel="stylesheet" href="estilosCiclo.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Ciclo de Vida del Software</h1>
+        <figure>
+            <img src="img/" alt="">
+        </figure>
+        <div class="cycle">
+            <div class="stage">
+                <div class="stage-number">1</div>
+                <div class="stage-name">
+                    <a href="">Planificiacion</a>
+                </div>
+            </div>
+            <div class="stage">
+                <div class="stage-number">2</div>
+                <div class="stage-name">
+                    <a href="img/logo.PNG">Analisis de Requisitos</a>
+                </div>
+            </div>
+            <div class="stage">
+                <div class="stage-number">3</div>
+                <div class="stage-name">Desarrollo</div>
+            </div>
+            <div class="stage">
+                <div class="stage-number">4</div>
+                <div class="stage-name">Pruebas</div>
+            </div>
+            <div class="stage">
+                <div class="stage-number">5</div>
+                <div class="stage-name">Despliegue</div>
+            </div>
+            <div class="stage">
+                <div class="stage-number">6</div>
+                <div class="stage-name">Mantenimiento</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
