--- a/CiclosDeVida/index.html
+++ b/CiclosDeVida/index.html
@@ -27,19 +27,19 @@
             </div>
             <div class="stage">
                 <div class="stage-number">3</div>
-                <div class="stage-name">Desarrollo</div>
+                <div class="stage-name"><a href="">Desarrollo</a></div>
             </div>
             <div class="stage">
                 <div class="stage-number">4</div>
-                <div class="stage-name">Pruebas</div>
+                <div class="stage-name"><a href="">Diseño</a></div>
             </div>
             <div class="stage">
                 <div class="stage-number">5</div>
-                <div class="stage-name">Despliegue</div>
+                <div class="stage-name"><a href="">Desarrollo</a></div>
             </div>
             <div class="stage">
                 <div class="stage-number">6</div>
-                <div class="stage-name">Mantenimiento</div>
+                <div class="stage-name"><a href=""> Despliegue y Mantenimiento</a></div>
             </div>
         </div>
     </div>
