--- a/cicloDeVida/index.html
+++ b/cicloDeVida/index.html
@@ -83,7 +83,8 @@
 
 
       <article class="tarjetas">
-        <img src="img/planes.png" alt="planificacion">
+        <a href="../planificacion/planificacion.html"><img src="img/planes.png" alt="planificacion"></a>
+        
         <a href="../planificacion/planificacion.html">1. Planificación</a>
         <p>Identificar qué necesita el cliente y qué funcionalidades debe tener el sistema.</p>
       </article>
@@ -91,7 +92,9 @@
 
 
       <article class="tarjetas">
-        <img src="img/analisis.png" alt="Análisis">
+
+        <a href="#"><img src="img/analisis.png" alt="Análisis"></a>
+        
         <a href="../analisisRequisitos/analisisRequisitos.html">2. Analisis de Requisitos</a>
         <p>Examinar requisitos técnicos, económicos y de viabilidad del proyecto.</p>
       </article>
