--- a/cicloDeVida/index.html
+++ b/cicloDeVida/index.html
@@ -93,7 +93,7 @@
 
       <article class="tarjetas">
 
-        <a href="#"><img src="img/analisis.png" alt="Análisis"></a>
+        <a href="../analisisRequisitos/analisisRequisitos.html"><img src="img/analisis.png" alt="Análisis"></a>
         
         <a href="../analisisRequisitos/analisisRequisitos.html">2. Analisis de Requisitos</a>
         <p>Examinar requisitos técnicos, económicos y de viabilidad del proyecto.</p>
