--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@
     }
 
 
+    .btn-secondary:hover{
+
+        background-color: #FFF2AF ;
+        color:#493d9e;
+    }
+
+
+
+
+
 
     </style>
 
@@ -221,6 +231,7 @@
                 <h2 class="fw-normal">Paula Gil</h2>
                 
                 <p><a class="btn btn-secondary" href="./miembros/paula.html">Ver Detalles »</a></p>
+            
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 col-md-12 CornoClaseMember">
