--- a/desarrollo/desarrollo.html
+++ b/desarrollo/desarrollo.html
@@ -112,7 +112,7 @@
             <h3> <img src="../img/engrana.png" alt="Análisis"> Integración</h3>
           </div>
 
-          <div>
+          <div class="Integracion">
 
             <ul>
               <li>Back-end: java, SpringBoot, MySql</li><br>
