se agragan panel de carga de actividades del profesor y lista de estudiantes, y vista de los profesores del semestre

--- a/diseño/calendar.html
+++ b/diseño/calendar.html
@@ -27,11 +27,11 @@
           </a>
         </div>
         <div class="nav-buttons">
-        <a href="../irwin/materias_new.html" class="nav-button">
+        <a href="../irwin/panelCargaActividades.html" class="nav-button">
           <img src="../cicloDeVida/img/profesor.png" alt="profesor" />
           Profesor
         </a>
-        <a href="#" class="nav-button">
+        <a href="../irwin/vistaEstudiantes.html" class="nav-button">
           <img src="../cicloDeVida/img/graduado.png" alt="Estudiante" />
           Estudiante
         </a>
